--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,38 @@
 <ion-header>
   <ion-navbar>
     <ion-title>
-      Ionic Blank
+      Pass Code
     </ion-title>
   </ion-navbar>
 </ion-header>
 
 <ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+	<ion-grid>
+		<ion-row>
+			<ion-col text-center>
+				<h3>Enter the correct Code</h3>
+				<p>Tap twice, press four times</p>
+			</ion-col>
+		</ion-row>
+		<ion-row>
+			<ion-col>
+				<ion-list>
+					<ion-item>
+						<p>Tapped: </p>
+					</ion-item>
+					<ion-item>
+						<p>Pressed</p>
+					</ion-item>
+				</ion-list>
+			</ion-col>
+		</ion-row>
+
+		<ion-row>
+			<ion-col style="background: lightgreen" text-center
+				(tap)="onTap()">Tap here</ion-col>
+			<ion-col style="background: lightgreen" text-center
+				(tap)="onPress()">Press here</ion-col>
+		</ion-row>
+	</ion-grid>
+  
 </ion-content>
